--- a/list_example/src/data/user.css
+++ b/list_example/src/data/user.css
@@ -1,8 +1,15 @@
 .User{
-    width: 120px;
+    background-color: #808080; 
     margin: 50px;
+    width: 50%;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     padding: 16px;
     text-align: center;
     }
+    p {
+        font-family: verdana;
+        text-align: left;
+      }
+
+      /* width: 30vw; */
