--- a/list-assignment/src/App.css
+++ b/list-assignment/src/App.css
@@ -22,3 +22,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+input[type=text], select {
+  width: 30%;
+  padding: 12px 20px;
+  margin: 20px 20px 20px 20px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size : 20px;
+  box-sizing: border-box;
+}
