Added styling to react js

--- a/list_example/src/data/user.css
+++ b/list_example/src/data/user.css
@@ -13,3 +13,9 @@
       }
 
       /* width: 30vw; */
+
+      /* @media (min-width:500px){
+        .User{
+          width: :450px;;
+        }
+      } */
